# my-site

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  startup.rs
backend/src/handler/: auth.rs  serve_wasm.rs
frontend/: astro.config.mjs  components.json  package-lock.json  package.json  tailwind.config.cjs
frontend/src/components/: BaseHead.astro  Footer.astro  Header.astro  HeaderLink.astro  svgGraph.tsx  svgLine.tsx
frontend/src/content/: config.ts
frontend/src/layouts/: BlogPost.astro
frontend/src/lib/: colors.ts  data.ts  utils.ts
frontend/src/pages/: [...slug].md.ts  about.astro  index.astro  rss.xml.js
frontend/src/styles/: flexoki.css  global.css  reset.css  theme.css
frontend/styles/: global.css
public/: blog-about.jpg~
src/: consts.ts
src/components/: BaseHead.astro  Footer.astro  Header.astro  HeaderLink.astro  ProjectZomboid.svelte  svgGraph.tsx
src/content/: config.ts
src/content/blog/: Automatic Disk Decryption on Immutable Fedora.md  credits.md  markdown-style-guide.md  speakingnotenglish.md
src/content/posts/: ABS.md  WRLBot.md  credits.md  damn.md  egpu.md  markdown-style-guide.md  obsidian webviews.md  speakingnotenglish.md  日本語勉強もの.md
src/content/projects/: WRLBot.md  (+9 more)
src/layouts/: BlogPost.astro  ObsidianLikeMarkdown.astro
src/lib/: abs-children.d.ts  abs-datareq.d.ts  abs-overview.d.ts
src/pages/: [...slug].astro  about.astro  index.astro
src/styles/: global.css  reset.css  shadcn.css  theme.css
(+18 files in other folders)
